--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /* intuitivnejší box-sizing */
-html { box-sizing: border-box; }
-*, ::after, ::before { box-sizing: inherit; }
+html {
+  box-sizing: border-box;
+}
+*,
+::after,
+::before {
+  box-sizing: inherit;
+}
 
 /*
 	BARVY
@@ -15,10 +21,246 @@ html { box-sizing: border-box; }
 */
 
 body {
-	margin: 0;
-	padding: 0;
-	background-color: #f5f5f5;
-	font-size: 16px;
-	line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  line-height: 1.6;
+  font-family: "Merriweather", serif;
 }
 
+.header {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(images/island-hlavicka.jpg) center/cover;
+  color: white;
+  text-align: center;
+  padding: 30px;
+}
+
+.header p {
+  max-width: 600px;
+  margin: auto;
+}
+
+h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 42px;
+  margin: 0;
+}
+
+.author {
+  font-style: italic;
+  font-weight: 300;
+  margin: 0;
+}
+
+.author::before {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 2px;
+  background-color: white;
+  margin: 30px auto 10px auto;
+}
+
+.content {
+  max-width: 960px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
+  margin: auto;
+  background-color: #f5f5f5;
+}
+
+.nav ul {
+  list-style: none;
+  text-transform: uppercase;
+  padding: 0;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  line-height: 2.5;
+}
+
+.nav li a {
+  text-decoration: none;
+  color: silver;
+  border-bottom: 1px solid silver;
+  display: block;
+}
+
+img {
+  width: 100%;
+}
+
+.gallery .credit {
+  width: 100%;
+  text-align: center;
+  color: silver;
+  font-family: "Raleway", sans-serif;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.picture .credit {
+  color: silver;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  margin: 0 0 40px 0;
+  padding: 0;
+}
+
+.credit a {
+  color: silver;
+}
+
+.article p {
+  padding: 0 30px 15px 30px;
+  margin: 0;
+}
+
+h2 {
+  font-family: "Raleway", sans-serif;
+  padding: 0 30px;
+  margin: 0;
+}
+
+h2::after {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 3px;
+  background-color: #629fe0;
+  margin-left: -30px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.picture img {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.picture {
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.picture .credit a {
+  color: silver;
+}
+
+.foto {
+  position: relative;
+}
+
+.foto img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.5s;
+}
+
+.foto:hover img {
+  transform: scale(1.3);
+}
+
+.img {
+  overflow: hidden;
+}
+
+.name {
+  font-weight: 700;
+}
+
+.footer {
+  padding: 20px 0;
+  color: silver;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.footer a {
+  color: silver;
+}
+
+@media screen and (min-width: 540px) {
+  .nav ul {
+    display: flex;
+    flex-direction: row;
+    margin: 30px 0;
+  }
+
+  .nav li {
+    flex: 1 1 auto;
+  }
+
+  .nav li a {
+    border: 1px solid silver;
+  }
+
+  .picture .credit {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    margin: 0;
+    color: white;
+  }
+
+  .picture .credit a {
+    color: white;
+  }
+
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    overflow: hidden;
+  }
+
+  .overlay {
+    position: absolute;
+    width: 100%;
+    bottom: -50px;
+    transition: bottom 0.5s;
+    visibility: hidden;
+  }
+
+  .foto:hover .overlay {
+    visibility: visible;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .must_see {
+    padding-left: 200px;
+  }
+  .grid-nav {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding-top: 50px;
+    align-items: start;
+  }
+  .nav ul {
+    display: block;
+    text-align: left;
+    margin: 0 0 0 40px;
+  }
+  .nav li a {
+    border: 0;
+    border-bottom: 1px solid silver;
+  }
+
+  .header {
+    padding-top: 50px;
+    height: 400px;
+    background-position: top;
+  }
+
+  h1 {
+    font-size: 45px;
+  }
+
+  .content {
+    margin-top: -50px;
+  }
+}
